--- a/front-end/indexV2_twoForms.html
+++ b/front-end/indexV2_twoForms.html
@@ -9,7 +9,7 @@
 
         <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-        <link href="assets/css/index.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/main.css" rel="stylesheet" type="text/css">
         <!-- Respond.js IE8 support of media queries -->
     	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     	<!--[if lt IE 9]>
@@ -26,6 +26,36 @@
 
         <div class="container">
             <div class="row">
+                <div class="col-xs-12 col-md-6 inscription">
+                    <h1> S'inscrire </h1>
+                    <div class="form-group row">
+                        <label for="example-text-input" class="col-2 col-form-label">Nom</label>
+                        <div class="col-10">
+                            <input class="form-control" type="text" placeholder="Deschamps Frédéric" id="example-text-input">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="example-email-input" class="col-2 col-form-label">Adresse mail</label>
+                        <div class="col-10">
+                            <input class="form-control" type="email" placeholder="j.deschamps@gmail.com" id="example-search-input">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="example-password-input" class="col-2 col-form-label">Mot de Passe</label>
+                        <div class="col-10">
+                            <input class="form-control" type="password" placeholder="***********" id="example-search-input">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="example-password-input" class="col-2 col-form-label">Confirmation de mot de passe</label>
+                        <div class="col-10">
+                            <input class="form-control" type="password" placeholder="************" id="example-search-input">
+                        </div>
+                    </div>
+                    <div class="form-group sub">
+                        <button type="submit" class="btn btn-default">Envoyer !</button>
+                    </div>
+                </div>
 
                 <div class="col-xs-12 col-md-12 connexion">
                     <h1> Se connecter </h1>
