--- a/front-end/inscription.html
+++ b/front-end/inscription.html
@@ -26,27 +26,38 @@
 
         <div class="container">
             <div class="row">
-
-                <div class="col-xs-12 col-md-12 connexion">
-                    <h1> Se connecter </h1>
+                <div class="col-xs-12 col-md-12 inscription">
+                    <h1> S'inscrire </h1>
                     <div class="form-group row">
-                        <label for="example-text-input" class="col-2 col-form-label">Identifiant / Mail</label>
+                        <label for="example-text-input" class="col-2 col-form-label">Nom</label>
                         <div class="col-10">
-                            <input class="form-control" type="text" placeholder="j.deschamps@gmail.com" id="example-text-input">
+                            <input class="form-control" type="text" placeholder="Deschamps Frédéric" id="example-text-input">
                         </div>
                     </div>
-
+                    <div class="form-group row">
+                        <label for="example-email-input" class="col-2 col-form-label">Adresse mail</label>
+                        <div class="col-10">
+                            <input class="form-control" type="email" placeholder="j.deschamps@gmail.com" id="example-search-input">
+                        </div>
+                    </div>
                     <div class="form-group row">
                         <label for="example-password-input" class="col-2 col-form-label">Mot de Passe</label>
                         <div class="col-10">
                             <input class="form-control" type="password" placeholder="***********" id="example-search-input">
                         </div>
                     </div>
+                    <div class="form-group row">
+                        <label for="example-password-input" class="col-2 col-form-label">Confirmation de mot de passe</label>
+                        <div class="col-10">
+                            <input class="form-control" type="password" placeholder="************" id="example-search-input">
+                        </div>
+                    </div>
                     <div class="form-group sub">
-                        <button type="submit" class="btn btn-info">Connexion !</button>
-                        <button class="btn btn-warning"> <a href="inscription.html">Pas de compte ? Inscrit toi ! </a></button>
+                        <button type="submit" class="btn btn-info">Envoyer !</button>
+                        <button class="btn btn-warning"> <a href="index.html"> Déjà un compte ? Connecte toi ! </a></button>
                     </div>
                 </div>
+
             </div>
         </div>
 
