correction ortho Btn Inscris Toi

--- a/front-end/indexV2_twoForms.html
+++ b/front-end/indexV2_twoForms.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="form-group sub">
                         <button type="submit" class="btn btn-info">Connexion !</button>
-                        <button class="btn btn-warning"> <a href="inscription.html">Pas de compte ? Inscrit toi ! </a></button>
+                        <button class="btn btn-warning"> <a href="inscription.html">Pas de compte ? Inscris toi ! </a></button>
                     </div>
                 </div>
             </div>
